--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 h1{
-
+color: black;
+font-size: 20px;
+font-family: ;         
 }
 
 img{
+    display: block;
+    margin: auto;
+    width: 50%;
 
 }
 
