--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ font-family: ;
 img{
     display: block;
     margin: auto;
-    width: 50%;
+    width: 40%;
 
 }
 
@@ -16,6 +16,8 @@ p{
 }
 
 h2{
-
+    color: black;
+    ]font-size: 25px;
+    
 }
 
