--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ font-size: 45px;
 font-family: ;         
 }
 
+body{
+    font-size:25px ;
+    background-color: aliceblue;
+}
+
 img{
     display: block;
     margin: auto;
@@ -20,4 +25,6 @@ h2{
     ]font-size: 25px;
     
 }
+
+
 
