--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 h1{
 color: rgb(3, 3, 97);
 font-size: 45px;
-font-family: ;         
+font-family: ; 
+text-align: center;        
+}
+
+h2{
+
 }
 
 body{
