--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1{
-color: rgb(4, 4, 150);
+color: black;
 font-size: 45px;
 font-family: ; 
        
@@ -26,7 +26,7 @@ p{
 }
 
 h2{
-    color:rgb(4, 4, 150);
+    color:black;
     ]font-size: 25px;
     
 }
