--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1{
-color: black;
+color: white;
 font-size: 45px;
 font-family: ; 
        
@@ -11,7 +11,7 @@ h2{
 
 body{
     font-size:25px ;
-    background-color: white;
+    background-color: black;
 }
 
 img{
@@ -26,7 +26,7 @@ p{
 }
 
 h2{
-    color:black;
+    color:white;
     ]font-size: 25px;
     
 }
