--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
 h1{
 color: white;
 font-size: 45px;
-font-family: ; 
+font-family: Georgia, 'Times New Roman', Times, serif; 
        
 }
 
 h2{
-
+font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 body{
     font-size:25px ;
     background-color: black;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 img{
@@ -22,12 +23,15 @@ img{
 }
 
 p{ color:white;
-
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 h2{
     color:white;
-    ]font-size: 25px;
+    font-size: 25px;
+    
+    
+
     
 }
  
@@ -35,6 +39,7 @@ h2{
        color: white;
         text-align: center; 
         font-size: 40px ;
+
         }
 
 
